# pmix

src/client/: pmix_client.c
src/event/: pmix_event_notification.c
src/mca/pdetector/: Makefile.am  pdetector.h
src/mca/pdetector/base/: Makefile.am  base.h  pdetector_base_frame.c  pdetector_base_select.c  pdetector_base_stubs.c
src/mca/pdetector/ring/: .pdetector_ring.c.swp  Makefile.am  pdetector_ring.c  pdetector_ring.h  pdetector_ring_component.c
src/mca/ptl/: ptl_types.h
src/runtime/: pmix_init.c
src/server/: pmix_server.c
